# cmakeExamples

./: funcs.cmake
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt
core/src/: hello.cpp
second/: CMakeLists.txt
second/src/: print.cpp  print.h
